ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/KFS_Applicant__c.object-meta.xml
<CustomObject>
    <label>KFS Applicant</label>
    <nameField>
        <label>KFS Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KFS Applicant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>