ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Type__c</fullName>
    <label>Applicant Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>