ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/CKYC_ID__c.field-meta.xml
<CustomField>
    <fullName>CKYC_ID__c</fullName>
    <label>CKYC ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>