ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Communication_Address_Flag__c.field-meta.xml
<CustomField>
    <fullName>Communication_Address_Flag__c</fullName>
    <label>Communication Address Flag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>