ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <label>Customer Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>