ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Customer_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Salutation__c</fullName>
    <label>Customer Salutation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>