ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>