ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Driving_License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Driving_License_Expiry_Date__c</fullName>
    <label>Driving License Expiry Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>