ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Driving_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Driving_License_Number__c</fullName>
    <label>Driving License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>