ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Form60__c.field-meta.xml
<CustomField>
    <fullName>Form60__c</fullName>
    <label>Form60</label>
    <length>100</length>
    <type>Text</type>
</CustomField>