ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Key_Fact_Statement__c.field-meta.xml
<CustomField>
    <fullName>Key_Fact_Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Fact Statement</label>
    <referenceTo>Key_Fact_Statement__c</referenceTo>
    <relationshipLabel>KFS Applicant</relationshipLabel>
    <relationshipName>KFS_Applicant</relationshipName>
    <type>Lookup</type>
</CustomField>