ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Office_Address_Flag__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_Flag__c</fullName>
    <label>Office Address Flag</label>
    <length>40</length>
    <type>Text</type>
</CustomField>