ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Office_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_Line_3__c</fullName>
    <label>Office Address Line 3</label>
    <length>120</length>
    <type>Text</type>
</CustomField>