ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Office_Pin_code__c.field-meta.xml
<CustomField>
    <fullName>Office_Pin_code__c</fullName>
    <label>Office Pin code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>