ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/PAN_GIR_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_GIR_Number__c</fullName>
    <label>PAN GIR Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>