ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/PAN_No__c.field-meta.xml
<CustomField>
    <fullName>PAN_No__c</fullName>
    <label>PAN No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>