ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Passport_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expiry_Date__c</fullName>
    <label>Passport Expiry Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>