ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <label>Passport No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>