ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Permanent_Address_Flag__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_Flag__c</fullName>
    <label>Permanent Address Flag</label>
    <length>40</length>
    <type>Text</type>
</CustomField>