ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Permanent_City__c.field-meta.xml
<CustomField>
    <fullName>Permanent_City__c</fullName>
    <label>Permanent City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>