ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Permanent_District__c.field-meta.xml
<CustomField>
    <fullName>Permanent_District__c</fullName>
    <label>Permanent District</label>
    <length>80</length>
    <type>Text</type>
</CustomField>