ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Permanent_Pin_code__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Pin_code__c</fullName>
    <label>Permanent Pin code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>