ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Regn_Incorp_Date__c.field-meta.xml
<CustomField>
    <fullName>Regn_Incorp_Date__c</fullName>
    <label>Regn Incorp Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>