ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Residential_Address_Flag__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address_Flag__c</fullName>
    <label>Residential Address Flag</label>
    <length>40</length>
    <type>Text</type>
</CustomField>