ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Residential_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address_Line_1__c</fullName>
    <label>Residential Address Line 1</label>
    <length>120</length>
    <type>Text</type>
</CustomField>