ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Residential_City__c.field-meta.xml
<CustomField>
    <fullName>Residential_City__c</fullName>
    <label>Residential City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>