ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Residential_District__c.field-meta.xml
<CustomField>
    <fullName>Residential_District__c</fullName>
    <label>Residential District</label>
    <length>40</length>
    <type>Text</type>
</CustomField>