ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Residential_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Residential_Mobile_Number__c</fullName>
    <label>Residential Mobile Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>