ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Residential_Pin_code__c.field-meta.xml
<CustomField>
    <fullName>Residential_Pin_code__c</fullName>
    <label>Residential Pin code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>