ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Residential_State__c.field-meta.xml
<CustomField>
    <fullName>Residential_State__c</fullName>
    <label>Residential State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>