ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/SurName__c.field-meta.xml
<CustomField>
    <fullName>SurName__c</fullName>
    <label>SurName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>