ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/UCIC__c.field-meta.xml
<CustomField>
    <fullName>UCIC__c</fullName>
    <label>UCIC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>