ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Voter_ID_No__c.field-meta.xml
<CustomField>
    <fullName>Voter_ID_No__c</fullName>
    <label>Voter ID No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>