ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Applicant__c/fields/Voter_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Voter_ID_Number__c</fullName>
    <label>Voter ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>